--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/env-cmd -f ./config/dev.env nodemon ./src/index.js"
+    "dev": "./node_modules/.bin/env-cmd -f ./config/dev.env nodemon ./src/index.js "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@splidejs/splide": "^2.4.21",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
