--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@splidejs/splide": "^2.4.21",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.11.18"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.18",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
